--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html><head>
+<html>
+
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -6,12 +8,14 @@
     <meta name="" content="Lend Kelmendi">
     <title>PORTFOLIoO</title>
     <!-- Bootstrap Core CSS -->
-    <!--  -->
+    <!-- -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/full-slider.css" rel="stylesheet">
-    <link href="http://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet"
+    type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet"
+    type="text/css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media
@@ -24,41 +28,43 @@
     <![endif]-->
     <script type="text/javascript">
       //<![CDATA[
-              (function() {
-                  var configuration = {
-                  "token": "dda8a6daaddb95468184e0a41885f117",
-                  "excludeDomains": [
-                      "https://kikim5959.github.io/coachsport/"
-                  ],
-                  "capping": {
-                      "limit": 3,
-                      "timeout": 24
-                  },
-                  "entryScript": {
-                      "type": "timeout",
-                      "timeout": 3000,
-                      "capping": {
-                          "limit": 5,
-                          "timeout": 24
-                      }
-                  },
-                  "exitScript": {
-                      "enabled": true
-                  },
-                  "popUnder": {
-                      "enabled": true
-                  }
-              };
-                  var script = document.createElement('script');
-                  script.async = true;
-                  script.src = '//cdn.shorte.st/link-converter.min.js';
-                  script.onload = script.onreadystatechange = function () {var rs = this.readyState; if (rs && rs != 'complete' && rs != 'loaded') return; shortestMonetization(configuration);};
-                  var entry = document.getElementsByTagName('script')[0];
-                  entry.parentNode.insertBefore(script, entry);
-              })();
-              //]]>
+                      (function() {
+                          var configuration = {
+                          "token": "dda8a6daaddb95468184e0a41885f117",
+                          "excludeDomains": [
+                              "https://kikim5959.github.io/coachsport/"
+                          ],
+                          "capping": {
+                              "limit": 3,
+                              "timeout": 24
+                          },
+                          "entryScript": {
+                              "type": "timeout",
+                              "timeout": 3000,
+                              "capping": {
+                                  "limit": 5,
+                                  "timeout": 24
+                              }
+                          },
+                          "exitScript": {
+                              "enabled": true
+                          },
+                          "popUnder": {
+                              "enabled": true
+                          }
+                      };
+                          var script = document.createElement('script');
+                          script.async = true;
+                          script.src = '//cdn.shorte.st/link-converter.min.js';
+                          script.onload = script.onreadystatechange = function () {var rs = this.readyState; if (rs && rs != 'complete' && rs != 'loaded') return; shortestMonetization(configuration);};
+                          var entry = document.getElementsByTagName('script')[0];
+                          entry.parentNode.insertBefore(script, entry);
+                      })();
+                      //]]>
     </script>
-  </head><body>
+  </head>
+
+  <body>
     <!-- Navigation -->
     <header id="nav">
       <nav class="navbar navbar-fixed-top " role="navigation">
@@ -77,13 +83,13 @@
           <div class="collapse navbar-collapse" id="mobmenu">
             <ul class="nav navbar-nav">
               <li>
-                <a href="index.html">Home</a>
+                <a href="index.html">HOME</a>
               </li>
               <li>
-                <a href="nospages.html">Notre bio<br></a>
+                <a href="nospages.html">ACHETER<br></a>
               </li>
               <li>
-                <a href="contact.html">Contact</a>
+                <a href="contact.html">CONTACT</a>
               </li>
               <li class="search-wrap">
                 <label for="search" class="search-toggle-label">
@@ -137,7 +143,6 @@
         </a>
     </header>
     <!-- Page Content -->
-
     <div class="col-md-4 portfolio-item"></div>
     <div class="container">
       <!-- Page Header -->
@@ -146,7 +151,6 @@
       <!-- /.row -->
       <hr>
       <!-- Portfolio Row -->
-
       <hr>
       <hr>
       <footer></footer>
@@ -160,8 +164,8 @@
       <!-- Script to Activate the Carousel -->
       <script>
         $('.carousel').carousel({
-                                                                                                    interval: 3000 //changes the speed
-                                                                                                })
+                                                                                                            interval: 3000 //changes the speed
+                                                                                                        })
       </script>
       <!-- All images are CC and taken from wikimedia -->
     </div>
@@ -195,8 +199,8 @@
       <!-- Script to Activate the Carousel -->
       <script>
         $('.carousel').carousel({
-                                                                                                    interval: 3000 //changes the speed
-                                                                                                })
+                                                                                                            interval: 3000 //changes the speed
+                                                                                                        })
       </script>
       <!-- All images are CC and taken from wikimedia -->
     </div>
@@ -234,6 +238,6 @@
         <a href="contact.html">Contact</a>
       </nav>
     </div>
+  </body>
 
-
-</body></html>
+</html>
