--- a/nospages.html
+++ b/nospages.html
@@ -40,7 +40,7 @@
               <span class="icon-bar white"></span>
               <span class="icon-bar white"></span>
             </button>
-            <a class="navbar-brand" href="https://kikim5959.github.io/Portfolio/nospages.html">NOTRE PORTFOLIO </a>
+            <a class="navbar-brand" href="https://kikim5959.github.io/Portfolio/nospages.html">immoDesi</a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="mobmenu">
