--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <span class="icon-bar white"></span>
               <span class="icon-bar white"></span>
             </button>
-            <a class="navbar-brand" href="https://kikim5959.github.io/Portfolio/nospages.html">NOTRE PORTFOLIO </a>
+            <a class="navbar-brand" href="https://kikim5959.github.io/Portfolio/nospages.html">immoDesign</a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="mobmenu">
@@ -161,41 +161,6 @@
       <script src="js/bootstrap.min.js"></script>
       <script src="js/jqueryEase.js" type="text/javascript"></script>
       <script type="text/javascript" src="js/main.js"></script>
-      <!-- Script to Activate the Carousel -->
-      <script>
-        $('.carousel').carousel({
-                                                                                                            interval: 3000 //changes the speed
-                                                                                                        })
-      </script>
-      <!-- All images are CC and taken from wikimedia -->
-    </div>
-    <div class="container">
-      <!-- Page Header -->
-      <!-- /.row -->
-      <!-- Portfolio Row -->
-      <!-- /.row -->
-      <hr>
-      <!-- Portfolio Row -->
-      <div class="row">
-        <div class="col-md-5 portfolio-item">
-          <a href="#" data-toggle="modal" data-target="#jpgmodal">
-                    <img class="center-block img-responsive" src="javascript-logo-png.png" alt="">
-                </a>
-          <h3>
-            <a href="https://fr.wikipedia.org/wiki/JavaScript">comprehension javascript</a>
-          </h3>
-        </div>
-      </div>
-      <hr>
-      <hr>
-      <footer></footer>
-      <!-- /.container -->
-      <!-- jQuery -->
-      <script src="js/jquery.js"></script>
-      <!-- Bootstrap Core JavaScript -->
-      <script src="js/bootstrap.min.js"></script>
-      <script src="js/jqueryEase.js" type="text/javascript"></script>
-      <script src="js/main.js" type="text/javascript"></script>
       <!-- Script to Activate the Carousel -->
       <script>
         $('.carousel').carousel({
