--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Notre portfolio">
     <meta name="" content="Lend Kelmendi">
-    <title>PORTFOLIoO</title>
+    <title></title>
     <!-- Bootstrap Core CSS -->
     <!-- -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -26,7 +25,7 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  
+
   </head>
 
   <body>
