--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,6 @@
-<html><head>
+<html>
+
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,8 +11,10 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/full-slider.css" rel="stylesheet">
-    <link href="http://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet"
+    type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet"
+    type="text/css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media
@@ -21,7 +25,9 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head><body id="contactBody">
+  </head>
+
+  <body id="contactBody">
     <!-- Navigation -->
     <header id="nav">
       <nav class="navbar navbar-fixed-top " role="navigation">
@@ -34,19 +40,20 @@
               <span class="icon-bar white"></span>
               <span class="icon-bar white"></span>
             </button>
-            <a class="navbar-brand" href="https://kikim5959.github.io/Portfolio/nospages.html">NOTRE PORTFOLIO </a>
+            <a class="navbar-brand" href="https://kikim5959.github.io/Portfolio/nospages.html"
+            contenteditable="true">immoDesign</a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="mobmenu">
             <ul class="nav navbar-nav">
               <li>
-                <a href="index.html">Home</a>
+                <a href="index.html">HOME</a>
               </li>
               <li>
-                <a href="nospages.html">Notre bio</a>
+                <a href="nospages.html">ACHETER</a>
               </li>
               <li>
-                <a href="contact.html">Contact</a>
+                <a href="contact.html">CONTACT</a>
               </li>
               <li class="search-wrap">
                 <label for="search" class="search-toggle-label">
@@ -98,26 +105,31 @@
             <div class="control-group form-group">
               <div class="controls">
                 <label>FULL NAME:</label>
-                <input type="text" class="form-control" id="name" required="" data-validation-required-message="Please enter your name.">
+                <input type="text" class="form-control" id="name" required=""
+                data-validation-required-message="Please enter your name.">
                 <p class="help-block"></p>
               </div>
             </div>
             <div class="control-group form-group">
               <div class="controls">
                 <label>Phone Number:</label>
-                <input type="tel" class="form-control" id="phone" required="" data-validation-required-message="Please enter your phone number.">
+                <input type="tel" class="form-control" id="phone"
+                required="" data-validation-required-message="Please enter your phone number.">
               </div>
             </div>
             <div class="control-group form-group">
               <div class="controls">
                 <label>Email Address:</label>
-                <input type="email" class="form-control" id="email" required="" data-validation-required-message="Please enter your email address.">
+                <input type="email" class="form-control" id="email"
+                required="" data-validation-required-message="Please enter your email address.">
               </div>
             </div>
             <div class="control-group form-group">
               <div class="controls">
                 <label>Message:</label>
-                <textarea rows="10" cols="100" class="form-control" id="message" required="" data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
+                <textarea rows="10" cols="100" class="form-control" id="message"
+                required="" data-validation-required-message="Please enter your message"
+                maxlength="999" style="resize:none"></textarea>
               </div>
             </div>
             <div id="success"></div>
@@ -174,13 +186,9 @@
       <script type="text/javascript" src="js/jqueryEase.js"></script>
       <script type="text/javascript" src="js/main.js"></script>
       <!-- Script to Activate the Carousel -->
-      <script>
-        $('.carousel').carousel({
-                                                    interval: 3000 //changes the speed
-                                                })
-      </script>
+    
       <!-- All images are CC and taken from wikimedia -->
     </div>
-  
+  </body>
 
-</body></html>
+</html>
