--- a/contact.html
+++ b/contact.html
@@ -168,11 +168,11 @@
                                 </a>
                 </li>
               </ul>
-              <p class="copyright text-muted" style="text-align: center">Copyright © aKIMM and hocine</p>
+              <p class="copyright text-muted" style="text-align: center">Copyright © aKIMM a</p>
               <nav id="footerNav">
                 <a href="index.html">Home</a>
-                <a href="artists.html">notre bio</a>
-                <a href="contact.html">Contact</a>
+                <a href="artists.html">ACHETER</a>
+                <a href="contact.html">CONTACT</a>
               </nav>
             </div>
           </div>
@@ -186,7 +186,6 @@
       <script type="text/javascript" src="js/jqueryEase.js"></script>
       <script type="text/javascript" src="js/main.js"></script>
       <!-- Script to Activate the Carousel -->
-    
       <!-- All images are CC and taken from wikimedia -->
     </div>
   </body>
