--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
   </head>
 
   <body>
@@ -128,8 +127,8 @@
       <!-- Script to Activate the Carousel -->
       <script>
         $('.carousel').carousel({
-                                                                                                            interval: 3000 //changes the speed
-                                                                                                        })
+                                                                                                                    interval: 3000 //changes the speed
+                                                                                                                })
       </script>
       <!-- All images are CC and taken from wikimedia -->
     </div>
@@ -162,8 +161,8 @@
       </ul>
       <p class="copyright text-muted" style="text-align: center">Copyright © aKIMM and hocine</p>
       <nav id="footerNav">
-        <a href="index.html">Home</a>
-        <a href="artists.html">notre bio</a>
+        <a href="index.html">HOME</a>
+        <a href="artists.html">ACHETER</a>
         <a href="contact.html">Contact</a>
       </nav>
     </div>
