--- a/nospages.html
+++ b/nospages.html
@@ -114,12 +114,6 @@
             <div class="row">
               <div class="col-sm-4 containerInfosDetailBien" style="  width:410px; padding:0;">
                 <div class="row">
-                  <div class="col-xs-offset-1 col-xs-11 fontSize22 colorGris666 upperCase infosDetailBien"
-                  style="line-height:26px; padding-top:18px; padding-bottom:23px; padding-left:5px; padding-right:0;">
-                    <br>
-                  </div>
-                </div>
-                <div class="row">
                   <div class="col-xs-offset-1 col-xs-11" style="padding-left:0; padding-right:0;">
                     <a class="fancy lienMiniature" rel="gallery1" href="http://www.galerieimmobilierparis.com/layout/uploads/biens/galerie-immobilier-paris-bien-fancy-3931.jpg"><img total="8" num="0" class="detailBienMiniature detailBienMiniatureSelect" style="display:block; float:left; margin-left:6px; margin-bottom:9px; width:123px; height:83px;" src="http://www.galerieimmobilierparis.com/layout/uploads/biens/galerie-immobilier-paris-bien-fancy-3931.jpg" alt="Miniature UNIVERSITE - SAINTS PERES" title="UNIVERSITE - SAINTS PERES"></a>
                     <a class="fancy lienMiniature" rel="gallery1" href="http://www.gundefined
@@ -251,7 +245,7 @@ alerieimmobilierparis.com/layout/uploads/biens/galerie-immobilier-paris-bien-fan
                             </a>
                   </li>
                 </ul>
-                <p class="copyright text-muted" style="text-align: center">Copyright © aKIMM et hocine</p>
+                <p class="copyright text-muted" style="text-align: center">Copyright © aKIMM&nbsp;</p>
                 <nav id="footerNav">
                   <a href="index.html">Home</a>
                   <a href="contact.html">Contact</a>
@@ -265,7 +259,7 @@ alerieimmobilierparis.com/layout/uploads/biens/galerie-immobilier-paris-bien-fan
         <script src="js/jquery.js"></script>
         <!-- Bootstrap Core JavaScript -->
         <script src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/jqueryEase.js"></script>
+        <script src="js/jqueryEase.js" type="text/javascript"></script>
         <script type="text/javascript" src="js/main.js"></script>
         <!-- Script to Activate the Carousel -->
         <script>
