--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
       </div>
       <!-- Controls -->
       <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="icon-prev" id="cLeft"></span>
-        </a>
+              <span class="icon-prev" id="cLeft"></span>
+          </a>
       <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="icon-next" id="cRight"></span>
-        </a>
+              <span class="icon-next" id="cRight"></span>
+          </a>
     </header>
     <!-- Page Content -->
     <div class="col-md-4 portfolio-item"></div>
@@ -127,8 +127,8 @@
       <!-- Script to Activate the Carousel -->
       <script>
         $('.carousel').carousel({
-                                                                                                                    interval: 3000 //changes the speed
-                                                                                                                })
+                                                                                                                      interval: 3000 //changes the speed
+                                                                                                                  })
       </script>
       <!-- All images are CC and taken from wikimedia -->
     </div>
@@ -136,30 +136,30 @@
       <ul class="list-inline text-center">
         <li>
           <a href="https://twitter.com/hoceheisenberg">
-                                    <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                                </span>
-                                </a>
+                                      <span class="fa-stack fa-lg">
+                                      <i class="fa fa-circle fa-stack-2x"></i>
+                                      <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                                  </span>
+                                  </a>
         </li>
         <li>
           <a href="https://www.facebook.com/profile.php?id=100008261418522">
-                                    <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                                </span>
-                                </a>
+                                      <span class="fa-stack fa-lg">
+                                      <i class="fa fa-circle fa-stack-2x"></i>
+                                      <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                                  </span>
+                                  </a>
         </li>
         <li>
           <a href="#">
-                                    <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                                </span>
-                                </a>
+                                      <span class="fa-stack fa-lg">
+                                      <i class="fa fa-circle fa-stack-2x"></i>
+                                      <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                  </span>
+                                  </a>
         </li>
       </ul>
-      <p class="copyright text-muted" style="text-align: center">Copyright © aKIMM and hocine</p>
+      <p class="copyright text-muted" style="text-align: center">Copyright © aKIMM&nbsp;</p>
       <nav id="footerNav">
         <a href="index.html">HOME</a>
         <a href="artists.html">ACHETER</a>
