--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <p class="copyright text-muted" style="text-align: center">Copyright © aKIMM&nbsp;</p>
       <nav id="footerNav">
         <a href="index.html">HOME</a>
-        <a href="artists.html">ACHETER</a>
+        <a href="nospages.html">ACHETER</a>
         <a href="contact.html">Contact</a>
       </nav>
     </div>
