--- a/contact.html
+++ b/contact.html
@@ -1,193 +1,183 @@
-<html>
+<!DOCTYPE html>
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Notre portfolio">
-    <meta name="author" content="Lend Kelmendi">
-    <title>PORTFOLIO</title>
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link href="css/full-slider.css" rel="stylesheet">
-    <link href="http://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet"
-    type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet"
-    type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media
-    queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file://
-    -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body id="contactBody">
-    <!-- Navigation -->
-    <header id="nav">
-      <nav class="navbar navbar-fixed-top " role="navigation">
+<html><head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Notre portfolio">
+        <meta name="author" content="Lend Kelmendi">
+        <title>PORTFOLIO</title>
+        <!-- Bootstrap Core CSS -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <!-- Custom CSS -->
+        <link href="css/full-slider.css" rel="stylesheet">
+        <link href="http://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet" type="text/css">
+        <link href="http://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/style.css">
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media
+        queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file://
+        -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    </head><body id="contactBody">
+        <!-- Navigation -->
+        <header id="nav">
+            <nav class="navbar navbar-fixed-top " role="navigation">
+                <div class="container">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mobmenu">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar white"></span>
+                            <span class="icon-bar white"></span>
+                            <span class="icon-bar white"></span>
+                        </button>
+                        <a class="navbar-brand" href="https://kikim5959.github.io/Portfolio/nospages.html" contenteditable="true">immoDesign</a>
+                    </div>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="mobmenu">
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a href="index.html">HOME</a>
+                            </li>
+                            <li>
+                                <a href="nospages.html">ACHETER</a>
+                            </li>
+                            <li>
+                                <a href="contact.html">CONTACT</a>
+                            </li>
+                            <li class="search-wrap">
+                                <label for="search" class="search-toggle-label">
+                                    <i class="fa fa-search"></i>
+                                </label>
+                                <input type="text" id="search" name="keywords" class="search">
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- /.navbar-collapse -->
+                </div>
+                <!-- /.container -->
+            </nav>
+        </header>
+        <!-- Page Content -->
+        <div class="section">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-xs-3 text-center">
+                        <a><i class="fa fa-5x fa-fw fa-instagram"></i></a>
+                    </div>
+                    <div class="col-xs-3">
+                        <a><i class="fa fa-5x fa-fw fa-twitter"></i></a>
+                    </div>
+                    <div class="col-xs-3">
+                        <a><i class="fa fa-5x fa-fw fa-facebook"></i></a>
+                    </div>
+                    <div class="col-xs-3 text-center">
+                        <a><i class="fa fa-5x fa-fw fa-github"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mobmenu">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar white"></span>
-              <span class="icon-bar white"></span>
-              <span class="icon-bar white"></span>
-            </button>
-            <a class="navbar-brand" href="https://kikim5959.github.io/Portfolio/nospages.html"
-            contenteditable="true">immoDesign</a>
-          </div>
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="mobmenu">
-            <ul class="nav navbar-nav">
-              <li>
-                <a href="index.html">HOME</a>
-              </li>
-              <li>
-                <a href="nospages.html">ACHETER</a>
-              </li>
-              <li>
-                <a href="contact.html">CONTACT</a>
-              </li>
-              <li class="search-wrap">
-                <label for="search" class="search-toggle-label">
-                  <i class="fa fa-search"></i>
-                </label>
-                <input type="text" id="search" name="keywords" class="search">
-              </li>
-            </ul>
-          </div>
-          <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-      </nav>
-    </header>
-    <!-- Page Content -->
-    <div class="section">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-xs-3 text-center">
-            <a><i class="fa fa-5x fa-fw fa-instagram"></i></a>
-          </div>
-          <div class="col-xs-3">
-            <a><i class="fa fa-5x fa-fw fa-twitter"></i></a>
-          </div>
-          <div class="col-xs-3">
-            <a><i class="fa fa-5x fa-fw fa-facebook"></i></a>
-          </div>
-          <div class="col-xs-3 text-center">
-            <a><i class="fa fa-5x fa-fw fa-github"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <!-- Content Row -->
-      <div class="row">
-        <!-- Contact Details Column -->
-        <!-- /.row -->
-        <!-- Contact Form -->
-        <div class="col-md-8">
-          <h3>
-            <div class="center">
-              <p class="lead leada text-danger">Vous souhaitez essayer notre solution ou nous contacter pour plus de renseignement,
-                merci de bien vouloir remplir le formulaire suivant. Je m'engage à vous
-                répondre dans les plus brefs délais.</p>
+            <!-- Content Row -->
+            <div class="row"><div class="col-md-12"><img class="img-responsive" src="http://maps.googleapis.com/maps/api/staticmap?center=Tombouctou,Mali&amp;zoom=12&amp;size=200x200&amp;sensor=false"></div></div><div class="row">
+                <!-- Contact Details Column -->
+                <!-- /.row -->
+                <!-- Contact Form -->
+                <div class="col-md-8">
+                    <h3>
+                        <div class="center">
+                            <p class="lead leada text-danger">Vous souhaitez essayer notre solution ou nous contacter pour plus de renseignement,
+                                merci de bien vouloir remplir le formulaire suivant. Je m'engage à vous
+                                répondre dans les plus brefs délais.</p>
+                        </div>
+                    </h3>
+                    <form name="sentMessage" id="contactForm" novalidate="">
+                        <div class="control-group form-group">
+                            <div class="controls">
+                                <label>FULL NAME:</label>
+                                <input type="text" class="form-control" id="name" required="" data-validation-required-message="Please enter your name.">
+                                <p class="help-block"></p>
+                            </div>
+                        </div>
+                        <div class="control-group form-group">
+                            <div class="controls">
+                                <label>Phone Number:</label>
+                                <input type="tel" class="form-control" id="phone" required="" data-validation-required-message="Please enter your phone number.">
+                            </div>
+                        </div>
+                        <div class="control-group form-group">
+                            <div class="controls">
+                                <label>Email Address:</label>
+                                <input type="email" class="form-control" id="email" required="" data-validation-required-message="Please enter your email address.">
+                            </div>
+                        </div>
+                        <div class="control-group form-group">
+                            <div class="controls">
+                                <label>Message:</label>
+                                <textarea rows="10" cols="100" class="form-control" id="message" required="" data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
+                            </div>
+                        </div>
+                        <div id="success"></div>
+                        <!-- For success/fail messages -->
+                        <button type="submit" class="btn btn-eff">Send Message</button>
+                    </form>
+                </div>
             </div>
-          </h3>
-          <form name="sentMessage" id="contactForm" novalidate="">
-            <div class="control-group form-group">
-              <div class="controls">
-                <label>FULL NAME:</label>
-                <input type="text" class="form-control" id="name" required=""
-                data-validation-required-message="Please enter your name.">
-                <p class="help-block"></p>
-              </div>
-            </div>
-            <div class="control-group form-group">
-              <div class="controls">
-                <label>Phone Number:</label>
-                <input type="tel" class="form-control" id="phone"
-                required="" data-validation-required-message="Please enter your phone number.">
-              </div>
-            </div>
-            <div class="control-group form-group">
-              <div class="controls">
-                <label>Email Address:</label>
-                <input type="email" class="form-control" id="email"
-                required="" data-validation-required-message="Please enter your email address.">
-              </div>
-            </div>
-            <div class="control-group form-group">
-              <div class="controls">
-                <label>Message:</label>
-                <textarea rows="10" cols="100" class="form-control" id="message"
-                required="" data-validation-required-message="Please enter your message"
-                maxlength="999" style="resize:none"></textarea>
-              </div>
-            </div>
-            <div id="success"></div>
-            <!-- For success/fail messages -->
-            <button type="submit" class="btn btn-eff">Send Message</button>
-          </form>
-        </div>
-      </div>
-      <footer>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-              <ul class="list-inline text-center">
-                <li>
-                  <a href="https://twitter.com/hoceheisenberg">
+            <footer>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                            <ul class="list-inline text-center">
+                                <li>
+                                    <a href="https://twitter.com/hoceheisenberg">
                                     <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                                 </span>
                                 </a>
-                </li>
-                <li>
-                  <a href="https://www.facebook.com/profile.php?id=100008261418522">
+                                </li>
+                                <li>
+                                    <a href="https://www.facebook.com/profile.php?id=100008261418522">
                                     <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                                 </span>
                                 </a>
-                </li>
-                <li>
-                  <a href="#">
+                                </li>
+                                <li>
+                                    <a href="#">
                                     <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                                 </span>
                                 </a>
-                </li>
-              </ul>
-              <p class="copyright text-muted" style="text-align: center">Copyright © aKIMM a</p>
-              <nav id="footerNav">
-                <a href="index.html">Home</a>
-                <a href="artists.html">ACHETER</a>
-                <a href="contact.html">CONTACT</a>
-              </nav>
-            </div>
-          </div>
+                                </li>
+                            </ul>
+                            <p class="copyright text-muted" style="text-align: center">Copyright © aKIMM a</p>
+                            <nav id="footerNav">
+                                <a href="index.html">Home</a>
+                                <a href="artists.html">ACHETER</a>
+                                <a href="contact.html">CONTACT</a>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+            <!-- /.container -->
+            <!-- jQuery -->
+            <script src="js/jquery.js"></script>
+            <!-- Bootstrap Core JavaScript -->
+            <script src="js/bootstrap.min.js"></script>
+            <script type="text/javascript" src="js/jqueryEase.js"></script>
+            <script type="text/javascript" src="js/main.js"></script>
+            <!-- Script to Activate the Carousel -->
+            <!-- All images are CC and taken from wikimedia -->
         </div>
-      </footer>
-      <!-- /.container -->
-      <!-- jQuery -->
-      <script src="js/jquery.js"></script>
-      <!-- Bootstrap Core JavaScript -->
-      <script src="js/bootstrap.min.js"></script>
-      <script type="text/javascript" src="js/jqueryEase.js"></script>
-      <script type="text/javascript" src="js/main.js"></script>
-      <!-- Script to Activate the Carousel -->
-      <!-- All images are CC and taken from wikimedia -->
-    </div>
-  </body>
 
-</html>
+
+</body></html>
